debugging mobile spacing issue on city.tsx component

--- a/src/Components/City.css
+++ b/src/Components/City.css
@@ -59,7 +59,6 @@
   position: relative;
   top: 40px;
   margin: auto;
-  height: 100%;
   z-index: 2;
   -webkit-animation: spin2 2s cubic-bezier(0.37, -0.01, 0, 1);
   -moz-animation: spin2 2s cubic-bezier(0.37, -0.01, 0, 1);
@@ -76,7 +75,6 @@
   position: relative;
   top: 40px;
   margin: auto;
-  height: 100%;
   z-index: 2;
   -webkit-animation: spin 2s cubic-bezier(0.37, -0.01, 0, 1);
   -moz-animation: spin 2s cubic-bezier(0.37, -0.01, 0, 1);
